<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
    <device id="retina4_7" orientation="landscape">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
...
                                            <rect key="frame" x="0.0" y="0.0" width="667" height="59.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tgm-Yl-3TA">
                                                    <rect key="frame" x="20" y="0.0" width="627" height="59"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clip Effect" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RpO-xb-zEr" userLabel="Title"
                                                            <rect key="frame" x="20" y="3" width="587" height="30"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="30" id="OVX-pG-c59"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="15"/>
                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                            <rect key="frame" x="0.0" y="0.0" width="667" height="59.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B56-px-tjB">
                                                    <rect key="frame" x="20" y="0.0" width="627" height="59"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transition Effect" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oic-Ul-5jB" userLabel="
                                                            <rect key="frame" x="20" y="3" width="587" height="30"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="30" id="JD5-zG-oKH"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="15"/>
                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        <connections>
                            <outlet property="dataSource" destination="zDy-JE-USm" id="yXu-cC-kak"/>
                            <outlet property="delegate" destination="zDy-JE-USm" id="jYm-AM-AAR"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Video Clip Properties" id="DZL-zH-STM">
                        <barButtonItem key="rightBarButtonItem" title="Next" id="iWK-Dn-60L">
                            <connections>
                                <action selector="doNext:" destination="zDy-JE-USm" id="SSr-yL-2D4"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="KAs-Uk-fS9" id="3ly-xd-W1u"/>
                            <outlet property="delegate" destination="KAs-Uk-fS9" id="gdz-IW-WAt"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Image Clip Properties" id="jYF-4Z-Yhr">
                        <barButtonItem key="rightBarButtonItem" title="Next" id="f1v-BF-LFx">
                            <connections>
                                <action selector="doNext:" destination="KAs-Uk-fS9" id="XkS-IM-7tT"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        <connections>
                            <outlet property="dataSource" destination="bvB-ch-AAq" id="Sq4-Rx-20o"/>
                            <outlet property="delegate" destination="bvB-ch-AAq" id="pcU-jP-bxF"/>
                            <outletCollection property="gestureRecognizers" destination="Aw7-1e-F1I" appends="YES" id="rrp-KD-BMV"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Clips" id="Jnw-Pw-uTL">
                        <rightBarButtonItems>
                            <barButtonItem title="Apply in project" id="8Rd-nn-8sI">
                                <connections>
                                    <action selector="done:" destination="bvB-ch-AAq" id="Cvn-q0-nqS"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Add SolidClip" id="9Lq-16-rqT" userLabel="Add SolidClip">
                                <connections>
...
