...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="B83-NG-LY5" id="du5-Oh-cx4"/>
                            <outlet property="delegate" destination="B83-NG-LY5" id="eLb-3L-HXM"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="NexEditor SDK Demo" id="T9y-j9-gB9"/>
                    <connections>
                        <segue destination="mNl-vc-614" kind="show" identifier="mediaPicker" id="UyU-gW-5FQ"/>
                        <segue destination="CuI-LI-TAb" kind="show" identifier="collageProject" id="mwX-3S-Gbj"/>
                        <segue destination="VEp-ce-0wz" kind="show" identifier="assetPackages" id="EP1-G3-CET"/>
                    </connections>
                </tableViewController>
...
            </objects>
            <point key="canvasLocation" x="2727" y="-658"/>
        </scene>
        <!--Preview-->
        <scene sceneID="ENX-Hf-lPu">
            <objects>
                <viewController storyboardIdentifier="previewDefaultLandscape" id="2fX-j2-OZE" userLabel="Preview" customClass="PreviewViewController" customModule="APIDemos" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="8XI-Cb-fcV"/>
                        <viewControllerLayoutGuide type="bottom" id="Om4-cB-95w"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Dbs-qd-zHh">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
