...
@end

@implementation NSString(AspectType)
- (NXEAspectType) aspectType
{
    NXEAspectType result = NXEAspectTypeUnknown;
    if ( [self isEqualToString:@"16v9"]) {
        result = NXEAspectTypeRatio16v9;
    } else if ( [self isEqualToString:@"9v16"]) {
        result = NXEAspectTypeRatio9v16;
    } else if ( [self isEqualToString:@"1v1"]) {
        result = NXEAspectTypeRatio1v1;
    } else if ( [self isEqualToString:@"1v2"]) {
...
